# Digital-Measurement-Calculator

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  CNAME  CODE_OF_CONDUCT  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Digital Measurment Calculator(DIC).cbp  Digital Measurment Calculator(DIC).depend  Digital Measurment Calculator(DIC).layout  LICENSE  New Text Document.txt  README.md  declarations.h  exception_handling.cpp  exception_handling.h  index.md  main.cpp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  report-a-bug.md
.github/workflow/: cmake.yml  greetings.yml
2D shapes/: area_2D.cpp  area_2D.h  perimeter_2D.cpp  perimeter_2D.h
2D_shapes/: Circle.cpp  Parallelogram.cpp  Polygon.cpp  Quadrilateral.cpp  Rectangle.cpp  Shape_2D.cpp  Shape_2D.h  Trapezium.cpp  square.cpp
3D shapes/: area_3D.cpp  area_3D.h  volume_3D.cpp  volume_3D.h
3D_shapes/: Cone.cpp  Cube.cpp  Cuboid.cpp  Cynlinder.cpp  Hemisphere.cpp  Shape_3D.cpp  Shape_3D.h  Sphere.cpp
Display/: Console_Lines.cpp  Display.cpp  Display.h
Parameters/: Special_parameters.cpp  one_parameter.cpp  parameter.cpp  parameter.h  three_parameters.cpp  two_parameters.cpp
extlibs/: termcolor.hpp
include/: Shape_2D.h  Shape_3D.h
src/: Handle_Exception.cpp  Shape_2D.cpp  Shape_3D.cpp  declarations.h  exception_handling.cpp  main.cpp  version.h
src/2D_shapes/: 2D_Shapes_part_1.cpp  2D_Shapes_part_2.cpp  Circle.cpp  Parallelogram.cpp  Polygon.cpp  Quadrilateral.cpp  Rectangle.cpp  Shape_2D.cpp  Shape_2D.h  Square.cpp  Trapezium.cpp  Triangle.cpp
(+40 files in other folders)
